Fixes squashed nav on smaller mobile screens

--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -17,24 +17,20 @@
   font-size: 1.4rem;
   float: right;
   text-align: right;
-   // media queries
+  // media queries
   @include breakpoint($mobile-sm) {
-    font-size: 1.6rem;
+    // font-size: 1.6rem;
     float: left;
     text-align: left;
     line-height: 2;
     width: 100%;
   }
 }
+
 .footer .social-icons {
   font-size: 2.2rem;
-  [class^='icon-'],
-  [class*='icon-'] {
+
+  [class^='icon-'] {
     color: #4A4A4A;
-  }
-  // media queries
-  @include breakpoint($mobile-lg) {
-    font-size: 2.6rem;
-    padding-bottom: 0.8rem;
   }
 }
